fixed x axis scrollbars being to tall

--- a/dashmachine/static/bootstrap_scss/system_themes/dark.scss
+++ b/dashmachine/static/bootstrap_scss/system_themes/dark.scss
@@ -73,6 +73,7 @@ $code-color: $secondary;
 /* SCROLLBARS */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 ::-webkit-scrollbar-track {
   background: transparent;
