--- a/dashmachine/static/bootstrap_scss/system_themes/ocean.scss
+++ b/dashmachine/static/bootstrap_scss/system_themes/ocean.scss
@@ -77,6 +77,7 @@ $code-color: $secondary;
 /* SCROLLBARS */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 ::-webkit-scrollbar-track {
   background: transparent;
